// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar native should render correctly onclick function check onSearchFocus 1`] = `
<View
  labels={[Function]}
  openSearchProductPage={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  showCustomizedSearch={false}
>
  <Styled(TouchableOpacity)
    activeOpacity={1}
    onPress={[Function]}
  >
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.900"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="mag-glass"
      onPress={[Function]}
      size="fs16"
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs12"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="lbl_looking_for"
      textDecoration={null}
    />
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.600"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="scan"
      onPress={[Function]}
      size="fs16"
    />
  </Styled(TouchableOpacity)>
</View>
`;

exports[`SearchBar native should render correctly should match snapshot 1`] = `
<View
  labels={[Function]}
  openSearchProductPage={null}
  showCustomizedSearch={false}
>
  <Styled(TouchableOpacity)
    activeOpacity={1}
    onPress={[Function]}
  >
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.900"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="mag-glass"
      onPress={[Function]}
      size="fs16"
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs12"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="lbl_looking_for"
      textDecoration={null}
    />
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.600"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="scan"
      onPress={[Function]}
      size="fs16"
    />
  </Styled(TouchableOpacity)>
</View>
`;

exports[`SearchBar native should render correctly with passed props render showCustomizedSearch on validation false 1`] = `
<View
  labels={
    Object {
      "lbl_looking_for": "I am Looking For",
    }
  }
  openSearchProductPage={null}
  showCustomizedSearch={false}
>
  <Styled(TouchableOpacity)
    activeOpacity={1}
    onPress={[Function]}
  >
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.900"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="mag-glass"
      onPress={[Function]}
      size="fs16"
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs12"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="I am Looking For"
      textDecoration={null}
    />
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.600"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="scan"
      onPress={[Function]}
      size="fs16"
    />
  </Styled(TouchableOpacity)>
</View>
`;

exports[`SearchBar native should render correctly with passed props render showCustomizedSearch on validation true 1`] = `
<Styled(View)>
  <Styled(TouchableOpacity)
    activeOpacity={1}
    onPress={[Function]}
    width="200px"
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs12"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="I am Looking For"
      textDecoration={null}
    />
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.900"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="mag-glass"
      onPress={[Function]}
      size="fs16"
    />
  </Styled(TouchableOpacity)>
</Styled(View)>
`;

exports[`SearchBar native should render correctly with showCustomizedSearch should match snapshot 1`] = `
<Styled(View)>
  <Styled(TouchableOpacity)
    activeOpacity={1}
    onPress={[Function]}
    width="200px"
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs12"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="lbl_looking_for"
      textDecoration={null}
    />
    <Styled(CustomIcon)
      accessibilityLabel=""
      color="gray.900"
      dataLocator=""
      iconFontName="Icomoon"
      isButton={false}
      isDisabled={false}
      margins={null}
      name="mag-glass"
      onPress={[Function]}
      size="fs16"
    />
  </Styled(TouchableOpacity)>
</Styled(View)>
`;
